CAP-20: address mentor review and add API regression tests